--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +15,8 @@
         <li class="servicos"><a href="servicos.html">Serviços</a></li>
         <li class="noticias"><a href="noticias.html">Notícias</a></li>
         <li class="contato"><a href="contato.html">Contato</a></li>
+         <p>ola</p>
+        
     </ul>
 </body>
 </html>
