--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li class="noticias"><a href="noticias.html">Notícias</a></li>
         <li class="contato"><a href="contato.html">Contato</a></li>
          <p>ola</p>
+         <p>ola dnovo</p>
         
     </ul>
 </body>
