--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <li class="contato"><a href="contato.html">Contato</a></li>
          <p>ola</p>
          <p>ola dnovo</p>
+         <p>ola 3</p>
+
         
     </ul>
 </body>
